Inclusão da Agenda Completa

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -191,7 +191,7 @@
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-					    O tutorial em Web Semântica é voltado para iniciantes. Mais informações em breve.
+					    O tutorial em Web Semântica é voltado para iniciantes. (Bianca Pereira)
 					</div>
 				    </li>
 				    <li class="accordion">
@@ -201,7 +201,7 @@
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-					    O tutorial em Processamento de Linguagem Natural é voltado para iniciantes. Mais informações em breve.
+					    O tutorial em Processamento de Linguagem Natural é voltado para iniciantes. (Danilo Carvalho)
 					</div>
 				    </li>
 				    <li class="accordion">
@@ -211,39 +211,59 @@
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-					    O tutorial em Question Answering é voltado para iniciantes. Mais informações em breve.
+					    O tutorial em Question Answering é voltado para iniciantes. (André Freitas)
 					</div>
 				    </li>
 				</ul>
 			    </div>
 			    <div class="tab-pane" id="tab2">
 				<ul class="accordion-group">
-				    <li class="accordion">
+					<li class="accordion">
 					<a class="accordion-heading">
-					    <time>9:00</time>
-					    <h4 class="accordion-title">Apresentação de Grupos de Pesquisa</h4>
+					    <time>08:30</time>
+					    <h4 class="accordion-title">Credenciamento</h4>
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-					    Esta seção visa a apresentação do trabalho sendo conduzido por diversos grupos de pesquisa na área de Computação Semântica no Rio de Janeiro. Seu objetivo é facilitar a busca por pontos de conexão para futuras colaborações na área.<br/><br/>
-					    <b>Alexandre Rademaker:</b> Semanticc Traffic Diagnosis with STAR-CITY.<br/>
-					    <b>Aline Paes:</b> Aprendizado de Modelos Semânticos Expressivos com Programação por Conjuntos de Resposta.<br/>
-					    <b>Ana Maria Moura:</b> Computação semântica: cenários de aplicação em desenvolvimento no LNCC.<br/>
-					    <b>André Freitas:</b> Semântica em Larga Escala: uma Abordagem Distribucional.<br/>
-					    <b>Bianca Pereira:</b> Compreensão de Linguagem Natural no Insight Centre: Construindo a ponte entre Texto e Base de Dados Semântica.<br/>
-					    <b>Christian Aranha:</b> Aprendizado Adaptativo de Estruturas Semânticas.<br/>
-					    <b>Cícero dos Santos:</b> Processamento de Linguagem Natural com Deep Learning: uma revolução iminente.<br/>
-					    <b>Daniel Schwabe:</b> Desenvolvimento de Sistemas Socio-Técnicos Dirigido por Modelos Semânticos.<br/>
-					    <b>Ícaro Medeiros:</b> Linked Data, Big data and User Science @ globo.com.<br/>
-					    <b>Karin Breitman:</b> Linked Data para Dados Abertos.<br/>
-					    <b>Kate Revoredo:</b> Adaptando, Aprendendo e Integrando Modelos Semânticos.<br/>
-					    <b>Marco Casanova:</b> Web de Dados: Fundamentos, Técnicas e Aplicações.<br/>
-					    <b>Sérgio Serra:</b> Computação semântica em E-Science.
+					    Credenciamento.
 					</div>
 				    </li>
 				    <li class="accordion">
 					<a class="accordion-heading">
-					    <time>14:00</time>
+					    <time>09:00</time>
+					    <h4 class="accordion-title">Abertura</h4>
+					    <span class="fa fa-plus-circle pull-right"></span>
+					</a>
+					<div class="accordion-body" style="display: none;">
+					    Abertura do evento e apresentação dos objetivos e agenda do dia.
+					</div>
+				    </li>
+				    <li class="accordion">
+					<a class="accordion-heading">
+					    <time>09:20</time>
+					    <h4 class="accordion-title">Palestras</h4>
+					    <span class="fa fa-plus-circle pull-right"></span>
+					</a>
+					<div class="accordion-body" style="display: none;">
+						<b>Marco Casanova:</b> Web de Dados: Fundamentos, Técnicas e Aplicações.<br/>
+					    <b>Karin Breitman:</b> Linked Data para Dados Abertos.<br/>
+						<b>Daniel Schwabe:</b> Desenvolvimento de Sistemas Socio-Técnicos Dirigido por Modelos Semânticos.<br/>
+					    <b>André Freitas:</b> Semântica em Larga Escala: uma Abordagem Distribucional.<br/>
+					</div>
+				    </li>
+				    <li class="accordion">
+					<a class="accordion-heading">
+					    <time>10:40</time>
+					    <h4 class="accordion-title">Coffee Break</h4>
+					    <span class="fa fa-plus-circle pull-right"></span>
+					</a>
+					<div class="accordion-body" style="display: none;">
+					    Coffee Break.
+					</div>
+				    </li>
+				    <li class="accordion">
+					<a class="accordion-heading">
+					    <time>11:00</time>
 					    <h4 class="accordion-title">Mesa Redonda</h4>
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
@@ -253,12 +273,70 @@
 				    </li>
 				    <li class="accordion">
 					<a class="accordion-heading">
-					    <time>16:00</time>
-					    <h4 class="accordion-title">Planejamento (Somente com convite)</h4>
+					    <time>12:00</time>
+					    <h4 class="accordion-title">Palestras</h4>
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-					    Reunião de representantes dos grupos convidados.
+						<b>Ícaro Medeiros:</b> Linked Data, Big data and User Science @ globo.com.<br/>
+						<b>Alexandre Rademaker:</b> Semantic Traffic Diagnosis with STAR-CITY.<br/>
+						<b>Cícero dos Santos:</b> Processamento de Linguagem Natural com Deep Learning: uma revolução iminente.<br/>
+					</div>
+				    </li>
+				    <li class="accordion">
+					<a class="accordion-heading">
+					    <time>13:00</time>
+					    <h4 class="accordion-title">Almoço e Networking</h4>
+					    <span class="fa fa-plus-circle pull-right"></span>
+					</a>
+					<div class="accordion-body" style="display: none;">
+						Almoço.
+					</div>
+				    </li>
+				    <li class="accordion">
+					<a class="accordion-heading">
+					    <time>14:40</time>
+					    <h4 class="accordion-title">Palestras</h4>
+					    <span class="fa fa-plus-circle pull-right"></span>
+					</a>
+					<div class="accordion-body" style="display: none;">
+						<b>Bianca Pereira:</b> Compreensão de Linguagem Natural no Insight Centre: Construindo a ponte entre Texto e Base de Dados Semântica.<br/>
+						<b>Ana Maria Moura:</b> Computação semântica: cenários de aplicação em desenvolvimento no LNCC.<br/>
+						<b>Sérgio Serra:</b> Computação semântica em E-Science.<br/>
+						<b>Aline Paes:</b> Aprendizado de Modelos Semânticos Expressivos com Programação por Conjuntos de Resposta.<br/>
+						<b>Christian Aranha:</b> Aprendizado Adaptativo de Estruturas Semânticas.<br/>
+					</div>
+				    </li>
+				    <li class="accordion">
+					<a class="accordion-heading">
+					    <time>16:20</time>
+					    <h4 class="accordion-title">Coffee Break</h4>
+					    <span class="fa fa-plus-circle pull-right"></span>
+					</a>
+					<div class="accordion-body" style="display: none;">
+					    Coffee Break.
+					</div>
+					<li class="accordion">
+					<a class="accordion-heading">
+					    <time>16:40</time>
+					    <h4 class="accordion-title">Palestras</h4>
+					    <span class="fa fa-plus-circle pull-right"></span>
+					</a>
+					<div class="accordion-body" style="display: none;">
+						<b>Maria Cláudia Cavalcanti:</b> Reuso de Ontologias para Publicação na Web Semântica.<br/>
+					    <b>Kate Revoredo:</b> Adaptando, Aprendendo e Integrando Modelos Semânticos.<br/>
+					    <b>Bernardo Braga:</b> OLED: Um ambiente para desenvolvimento, avaliação e implementação de ontologias. 
+					</div>
+				    </li>
+				    </li>
+				    <li class="accordion">
+					<a class="accordion-heading">
+					    <time>17:40</time>
+					    <h4 class="accordion-title">Fechamento</h4>
+					    <span class="fa fa-plus-circle pull-right"></span>
+					</a>
+					<div class="accordion-body" style="display: none;">
+ 						Fechamento do Evento.
 					</div>
 				    </li>
 				</ul>
