Inclusão de foto da Yoko. Inclusão de Slides (Bianca e Ícaro). Atualização dos Palestrantes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,7 +132,7 @@
 		    <div class="event-info">
 			<div class="icon fa fa-microphone"></div>
 			<div class="info">
-			    <h3>15 palestrantes</h3>
+			    <h3>14 palestrantes</h3>
 			    <span>Especialistas em Computação Semântica</span>
 			</div>
 		    </div>
@@ -191,7 +191,7 @@
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-					    O tutorial em Web Semântica é voltado para iniciantes. (Bianca Pereira)
+					    O tutorial em Web Semântica é voltado para iniciantes. (Bianca Pereira) - (<a href="http://www.slideshare.net/bianca_oliveira/tutorial-de-web-semntica-compsem-2015">slides</a>)
 					</div>
 				    </li>
 				    <li class="accordion">
@@ -278,7 +278,7 @@
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-						<b>Ícaro Medeiros:</b> Linked Data, Big data and User Science @ globo.com.<br/>
+						<b>Ícaro Medeiros:</b> Linked Data, Big data and User Science @ globo.com. (<a href="http://www.slideshare.net/icaromedeiros/linked-data-big-data-and-user-science-at-globocom">slides</a>)<br/>
 						<b>Alexandre Rademaker:</b> Semantic Traffic Diagnosis with STAR-CITY.<br/>
 						<b>Cícero dos Santos:</b> Processamento de Linguagem Natural com Deep Learning: uma revolução iminente.<br/>
 					</div>
@@ -300,7 +300,7 @@
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-						<b>Bianca Pereira:</b> Compreensão de Linguagem Natural no Insight Centre: Construindo a ponte entre Texto e Base de Dados Semântica.<br/>
+						<b>Bianca Pereira:</b> Compreensão de Linguagem Natural no Insight Centre: Construindo a ponte entre Texto e Base de Dados Semântica. (<a href="http://www.slideshare.net/bianca_oliveira/compreenso-de-linguagem-natural-no-insight-construindo-a-ponte-entre-texto-e-base-de-dados-semntica">slides</a>)<br/>
 						<b>Ana Maria Moura:</b> Computação semântica: cenários de aplicação em desenvolvimento no LNCC.<br/>
 						<b>Sérgio Serra:</b> Computação semântica em E-Science.<br/>
 						<b>Aline Paes:</b> Aprendizado de Modelos Semânticos Expressivos com Programação por Conjuntos de Resposta.<br/>
@@ -431,6 +431,21 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
+				<img src="images/speakers/no_pic.gif" alt="Marco Casanova">
+			    </div>
+			    <div class="speaker-contacts">
+				<!--<a href="#" class="contact pull-left fa fa-university"></a>
+				<a href="#" class="contact pull-right fa fa-linkedin"></a>-->
+			    </div>
+			</div>
+			<h3>Bernardo Braga</h3>
+			<p>Universidade Federal do Espírito Santo (UFES)</p>
+		    </div>
+		</div>
+		<div class="col-md-4 col-sm-6">
+		    <div class="speaker">
+			<div class="speaker-info">
+			    <div class="speaker-photo">
 				<img src="images/speakers/bianca_pereira.jpg" alt="Bianca Pereira">
 			    </div>
 			    <div class="speaker-contacts">
@@ -534,50 +549,20 @@
 			<p>Universidade Federal do Estado do Rio de Janeiro (UniRIO)</p>
 			</div>
 		</div>
-		<div class="col-md-4 col-sm-6">
-		    <div class="speaker">
-			<div class="speaker-info">
-			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Marco Casanova">
-			    </div>
-			    <div class="speaker-contacts">
-				<a href="http://www.inf.puc-rio.br/~casanova" class="contact pull-left fa fa-university"></a>
-				<a href="https://www.linkedin.com/in/marcoantoniocasanova" class="contact pull-right fa fa-linkedin"></a>
-			    </div>
-			</div>
-			<h3>Marco Casanova</h3>
-			<p>Pontifícia Universidade Católica (PUC-Rio)</p>
-		    </div>
-		</div>
 		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic_w.png" alt="Maria Cláudia Cavalcante">
+				<img src="images/speakers/yoko.jpg" alt="Maria Cláudia Cavalcante">
 			    </div>
 			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="http://lattes.cnpq.br/7292694995543789" class="contact pull-left fa fa-university"></a>
 				<a href="https://www.linkedin.com/pub/maria-claudia-cavalcanti/4/191/662" class="contact pull-right fa fa-linkedin"></a>
 			    </div>
 			</div>
 			<h3>Maria Cláudia Cavalcante</h3>
 			<p>Instituto Militar de Engenharia (IME)</p>
-		    </div>
-		</div>
-		<div class="col-md-4 col-sm-6">
-		    <div class="speaker">
-			<div class="speaker-info">
-			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Renato Rocha Souza">
-			    </div>
-			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
-				<a href="https://www.linkedin.com/profile/view?id=357907" class="contact pull-right fa fa-linkedin"></a>
-			    </div>
-			</div>
-			<h3>Renato Rocha Souza</h3>
-			<p>Fundação Getúlio Vargas (FGV)</p>
 		    </div>
 		</div>
 		<div class="col-md-4 col-sm-6">
