Incluindo slides de Yoko e Kate

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -323,8 +323,8 @@
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-						<b>Maria Cláudia Cavalcanti:</b> Reuso de Ontologias para Publicação na Web Semântica.<br/>
-					    <b>Kate Revoredo:</b> Adaptando, Aprendendo e Integrando Modelos Semânticos.<br/>
+						<b>Maria Cláudia Cavalcanti:</b> Reuso de Ontologias para Publicação na Web Semântica. (<a href="http://www.slideshare.net/CompSem/apresentacao15minutos">slides</a>)<br/>
+					    <b>Kate Revoredo:</b> Adaptando, Aprendendo e Integrando Modelos Semânticos. (<a href="http://www.slideshare.net/CompSem/adaptando-aprendendo-e-integrando-modelos-semnticos">slides</a>)<br/>
 					    <b>Bernardo Braga:</b> OLED: Um ambiente para desenvolvimento, avaliação e implementação de ontologias. 
 					</div>
 				    </li>
