Inclusão dos slides do Serra

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -302,7 +302,7 @@
 					<div class="accordion-body" style="display: none;">
 						<b>Bianca Pereira:</b> Compreensão de Linguagem Natural no Insight Centre: Construindo a ponte entre Texto e Base de Dados Semântica. (<a href="http://www.slideshare.net/bianca_oliveira/compreenso-de-linguagem-natural-no-insight-construindo-a-ponte-entre-texto-e-base-de-dados-semntica">slides</a>)<br/>
 						<b>Ana Maria Moura:</b> Computação semântica: cenários de aplicação em desenvolvimento no LNCC.<br/>
-						<b>Sérgio Serra:</b> Computação semântica em E-Science.<br/>
+						<b>Sérgio Serra:</b> Computação semântica em E-Science. (<a href="http://r1.ufrrj.br/petsi/wp-content/uploads/2013/11/Apresenta%C3%A7%C3%A3o_Serra.pdf">slides</a>)<br/>
 						<b>Aline Paes:</b> Aprendizado de Modelos Semânticos Expressivos com Programação por Conjuntos de Resposta.<br/>
 						<b>Christian Aranha:</b> Aprendizado Adaptativo de Estruturas Semânticas.<br/>
 					</div>
