--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -325,7 +325,7 @@
 					<div class="accordion-body" style="display: none;">
 						<b>Maria Cláudia Cavalcanti:</b> Reuso de Ontologias para Publicação na Web Semântica. (<a href="http://www.slideshare.net/CompSem/apresentacao15minutos">slides</a>)<br/>
 					    <b>Kate Revoredo:</b> Adaptando, Aprendendo e Integrando Modelos Semânticos. (<a href="http://www.slideshare.net/CompSem/adaptando-aprendendo-e-integrando-modelos-semnticos">slides</a>)<br/>
-					    <b>Bernardo Braga:</b> OLED: Um ambiente para desenvolvimento, avaliação e implementação de ontologias. 
+					    <b>Bernardo Braga:</b> OLED: Um ambiente para desenvolvimento, avaliação e implementação de ontologias. (<a href="http://www.slideshare.net/CompSem/apresentacao-bernardo">slides</a>)
 					</div>
 				    </li>
 				    </li>
