Inclusão dos slides do Danilo e do Hugo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -201,7 +201,7 @@
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-					    O tutorial em Processamento de Linguagem Natural é voltado para iniciantes. (Danilo Carvalho)
+					    O tutorial em Processamento de Linguagem Natural é voltado para iniciantes. (Danilo Carvalho) -(<a href="http://www.slideshare.net/CompSem/tutorial-em-processamento-de-linguagem-natural">slides</a>)
 					</div>
 				    </li>
 				    <li class="accordion">
